--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,13 @@ html{
     text-align: center;
     margin: 40px 0px; 
 }
+.swe{
+    font-size: 2.3rem;
+    margin-bottom: 50px;
+    font-weight: bold;
+    border: 1px solid white;
+    padding: 20px;
+}
 .btn{
     padding: 10px 35px;
     background-color: transparent;
